[package]
name = "jws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dirs = "4.0.0"
pancurses = "0.17.0"
magic-crypt = "3.1.9"
clap = { version = "4.1.6", features = ["derive"] }
menu_rs = "0.3.0"
regex = "1.10.2"
colored = "2.0.4"
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
